Bug 14800 - bind() fails due to wrong sa_socklen
Summary: bind() fails due to wrong sa_socklen
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.15.0rc2
Hardware: All All
: P5 regression (vote)
Target Milestone: 4.15
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-18 10:20 UTC by Björn Jacke
Modified: 2021-09-01 09:55 UTC (History)
3 users (show)

See Also:


Attachments
patch for 4.15 (1.25 KB, patch)
2021-08-31 10:18 UTC, Björn Jacke
bjacke: review+
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Jacke 2021-08-18 10:20:01 UTC
on non-Linux systems like AIX for example bind() fails due to wrong assignment of sa_socklen. Patch will follow.
Comment 1 Samba QA Contact 2021-08-31 09:55:04 UTC
This bug was referenced in samba master:

1209c89dcf6371bbfa4f3929a47a573ef2916c1a
Comment 2 Björn Jacke 2021-08-31 10:18:05 UTC
Created attachment 16754 [details]
patch for 4.15
Comment 3 Karolin Seeger 2021-09-01 06:16:46 UTC
Pushed to autobuild-v4-15-test.
Comment 4 Samba QA Contact 2021-09-01 09:01:04 UTC
This bug was referenced in samba v4-15-test:

3f8db63d9bc802800566c73e12bb73491d503d1d
Comment 5 Karolin Seeger 2021-09-01 09:11:32 UTC
Pushed to v4-15-test.
Closing out bug report.

Thanks!
Comment 6 Samba QA Contact 2021-09-01 09:55:15 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.0rc4):

3f8db63d9bc802800566c73e12bb73491d503d1d